# clawstrike

./: .gitignore  CLAUDE.md  README.md  clawstrike.example.yaml  docker-compose.yml  docker-setup.sh  progress.txt  pyproject.toml
docs/: configuration.md  direct-setup.md  docker-setup.md
skills/clawstrike/: README.md  SKILL.md
skills/clawstrike/references/: cli.md  mcp.md
src/clawstrike/: classifier.py  cli.py  config.py  db.py  gating.py  mcpserver.py  trust.py
tasks/: clawstrike-prd.md  clawstrike-user-stories.md  progress.txt
tests/: test_classifier.py  test_cli.py  test_config.py  test_db.py  test_gating.py  test_server.py  test_trust.py
tests/e2e/: test_e2e.py
tests/integration/: test_cli.py
tests/test_server/: helpers.py  test_classify.py  test_confirm.py  test_e2e.py  test_gate.py  test_startup.py
tests/unit/: test_config.py
